<resources>
    <string name="app_name">GPA_R01907594_Calculator</string>
    <string name="button_compute">Compute GPA</string>
    <string name="button_clear">Clear</string>
    <string name="c1">Course 1</string>
    <string name="c2">Course 2</string>
    <string name="c3">Course 3</string>
    <string name="c4">Course 4</string>
    <string name="c5">Course 5</string>
    <string name="title">Enter your grades</string>
    <string name="hint">Final Grade</string>
    <string name="gpa">GPA: </string>
</resources>
