<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thisLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0732DD"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editText7"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:ems="10"
            android:fontFamily="@font/bangers"
            android:inputType="number"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:ems="10"
            android:fontFamily="@font/bangers"
            android:inputType="number"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:ems="10"
            android:fontFamily="@font/bangers"
            android:inputType="number"
            android:textAllCaps="false"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:ems="10"
            android:fontFamily="@font/bangers"
            android:inputType="number"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/c1"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            app:fontFamily="@font/bangers"
            app:layout_constraintEnd_toStartOf="@+id/editText3"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:onClick="calculateGPA"
            android:text="@string/button_compute"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/c2"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            app:fontFamily="@font/bangers"
            app:layout_constraintEnd_toStartOf="@+id/editText4"
            app:layout_constraintHorizontal_bias="0.442"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/c3"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            app:fontFamily="@font/bangers"
            app:layout_constraintEnd_toStartOf="@+id/editText5"
            app:layout_constraintHorizontal_bias="0.429"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/c4"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            app:fontFamily="@font/bangers"
            app:layout_constraintEnd_toStartOf="@+id/editText6"
            app:layout_constraintHorizontal_bias="0.429"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/c5"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            app:fontFamily="@font/bangers"
            app:layout_constraintEnd_toStartOf="@+id/editText7"
            app:layout_constraintHorizontal_bias="0.422"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFEB3B"
            android:textSize="30sp"
            app:fontFamily="@font/bangers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/gpa"
            android:textColor="#FFEB3B"
            android:textSize="30sp"
            app:fontFamily="@font/bangers"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText7"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:ems="10"
            android:fontFamily="@font/bangers"
            android:inputType="number"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>